Added tlmgr install requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_install:
   | tar -JxC $HOME/texlive
 script:
 - PATH=$HOME/texlive/bin/x86_64-linux:$PATH
+- tlmgr install algorithmicx
+- tlmgr install algorithm
 - pdflatex Concepts
 - bibtex Concepts
 - pdflatex Concepts
