--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-sudo: false
+sudo: true
 before_install:
 - mkdir -p $HOME/texlive && curl -L https://github.com/urdh/texlive-blob/releases/download/20170106/texlive.tar.xz
   | tar -JxC $HOME/texlive
 script:
 - PATH=$HOME/texlive/bin/x86_64-linux:$PATH
+- tlmgr update --self
 - tlmgr install algorithmicx
 - tlmgr install algorithm
 - pdflatex Concepts
